--- a/src/main/features/claimant-response/views/sign-settlement-agreement.njk
+++ b/src/main/features/claimant-response/views/sign-settlement-agreement.njk
@@ -18,7 +18,7 @@
         {{ termsOfAgreement (
           id = 'termsOfAgreement',
           response = claim.response,
-          courtOfferedPaymentIntention = courtOfferedPaymentIntention,
+          paymentIntention = paymentIntention,
           totalAmount = totalAmount
         ) }}
 
