--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -42,6 +42,8 @@ ccjRequestedForDefendantClaimDetails %}
   offerSettlementReachedForDefendant,
   offerSettlementReachedForClaimant %}
 
+{% from "./claimStatus/paidInFullClaimant.njk" import paidInFullClaimant %}
+
 {% macro caseHistoryForClaimantClaimDetails(claim, csrf) %}
   {% for state in claim.stateHistory %}
     <div class="status-block">
@@ -84,6 +86,9 @@ ccjRequestedForDefendantClaimDetails %}
         <p>
           {{ caseStatusForClaimant(state.status, claim) }}
         </p>
+      {% endif %}
+      {% if state.status === ClaimStatus.PAID_IN_FULL %}
+        {{ paidInFullClaimant(claim) }}
       {% endif %}
     </div>
   {% endfor %}
