--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmissionForClaimant.njk
@@ -33,8 +33,8 @@
     <p>{{ t('You can settle for less than the full claim amount.') }}</p>
     <a href="{{ AppPaths.contactUsPage.uri }}" class="button button-secondary">Tell us you've settled</a>
     {% if claim.response.paymentIntention.isPastPaymentDeadline %}
-      <h2 class="heading-small">{{ t('What to do if they haven’t paid') }}</h2>
-      <p>{{ t('If the defendant doesn’t pay you, you can ' + internalLink('request a County Court Judgment', CCJPaths.paidAmountPage.evaluateUri({ externalId: claim.externalId }))
+      <h2 class="heading-small">{{ t('If you haven’t been paid') }}</h2>
+      <p>{{ t('If the defendant hasn’t paid you, you can ' + internalLink('request a County Court Judgment', CCJPaths.paidAmountPage.evaluateUri({ externalId: claim.externalId }))
           + '.') | safe }}</p>
     {% else %}
       <h2 class="heading-small">{{ t('What to do if they don’t pay') }}</h2>
