--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -87,7 +87,7 @@ ccjRequestedForDefendantClaimDetails %}
           {{ caseStatusForClaimant(state.status, claim) }}
         </p>
       {% endif %}
-      {% if state.status === ClaimStatus.PAID_IN_FULL %}
+      {% if state.status === ClaimStatus.PAID_IN_FULL_CCJ_CANCELLED or PAID_IN_FULL_CCJ_SATISFIED %}
         {{ paidInFullClaimant(claim) }}
       {% endif %}
     </div>
