Changes after reviewing prototype with produciton code

--- a/src/main/common/components/payment-intention/payment-option.njk
+++ b/src/main/common/components/payment-intention/payment-option.njk
@@ -38,7 +38,7 @@
               hint: 'The claimant can request a County Court Judgment (CCJ) against you if you don’t pay immediately.'
             },
             {
-              label: DefendantPaymentType.INSTALMENTS.displayValue,
+              label: 'I’ll suggest a repayment plan',
               value: DefendantPaymentType.INSTALMENTS.value,
               checked: (form.valueFor('option') === DefendantPaymentType.INSTALMENTS),
               hint: 'The claimant can request a County Court Judgment (CCJ) against you if you don’t pay immediately.'
