--- a/src/main/features/response/views/confirmation/full-admission.njk
+++ b/src/main/features/response/views/confirmation/full-admission.njk
@@ -10,10 +10,10 @@
 {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
   <p>{{ t('We’ve emailed {{ claimantName }} your offer to pay by {{ paymentDate }} and your explanation of why you can’t pay before then.',
       { claimantName: claimantName, paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
-  <p>{{ t('We’ll email you to tell you their response. If they don’t respond within 6 months, the claim will be put on hold.') }}</p>
+  <p>{{ t('We’ll email you to tell you their response.') }}</p>
 {% endif %}
 
 {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
   <p>{{ t('We’ve emailed {{ claimantName }} to tell them you’ve suggested paying by instalments.', { claimantName: claimantName }) }}</p>
-  <p>{{ t('We’ll email you to tell you their response. If they don’t respond within 6 months, the claim will be put on hold.') }}</p>
+  <p>{{ t('We’ll email you to tell you their response.') }}</p>
 {% endif %}
