--- a/src/main/features/response/views/confirmation/part-admission.njk
+++ b/src/main/features/response/views/confirmation/part-admission.njk
@@ -8,7 +8,7 @@
 {% if claim.response.paymentIntention %}
 
   {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-    <p>{{ t('You believe you owe {{ amount }}. We’ve emailed {{ claimantName }} your offer to pay this amount immediately.',
+    <p>{{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} immediately.',
         { claimantName: claimantName, amount: amount }) }}</p>
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
     <p>{{ t('You believe you owe {{ amount }}. We’ve emailed {{ claimantName }} your offer to pay this amount by {{ paymentDate }}.',
@@ -19,5 +19,5 @@
   {% endif %}
 
   <p>{{ t('We’ve also sent them your explanation of why you don’t believe you owe the amount claimed.') }}</p>
-  <p>{{ t('We’ll email you to tell you their response. If they don’t respond within 6 months, the claim will be put on hold.') }}</p>
+  <p>{{ t('We’ll contact you when they respond.') }}</p>
 {% endif %}
