--- a/src/main/features/response/views/statement-of-means/check-and-send.njk
+++ b/src/main/features/response/views/statement-of-means/check-and-send.njk
@@ -66,7 +66,7 @@
   {% set defendantSeverelyDisabled = draft.statementOfMeans.severeDisability.option === 'yes' %}
 {% endif %}
 
-{{ row('Where are you living?	', draft.statementOfMeans.residence.residenceType, bold = true, StatementOfMeansPaths.residencePage.evaluateUri({ externalId: claim.externalId })) }}
+{{ row('Where do you live?	', draft.statementOfMeans.residence.residenceType, bold = true, StatementOfMeansPaths.residencePage.evaluateUri({ externalId: claim.externalId })) }}
 
 {{ row('Do you live with a partner?', draft.statementOfMeans.cohabiting.option | capitalize, bold = true, StatementOfMeansPaths.partnerPage.evaluateUri({ externalId: claim.externalId })) }}
 {% if draft.statementOfMeans.cohabiting.option === 'yes' %}
