--- a/src/main/features/claimant-response/views/payment-option.njk
+++ b/src/main/features/claimant-response/views/payment-option.njk
@@ -32,7 +32,7 @@
             checked: (form.valueFor('option') === DefendantPaymentType.BY_SET_DATE)
           },
           {
-            label: z,
+            label: DefendantPaymentType.INSTALMENTS.displayValue,
             value: DefendantPaymentType.INSTALMENTS.value,
             checked: (form.valueFor('option') === DefendantPaymentType.INSTALMENTS)
           }
