--- a/src/main/features/claimant-response/views/accept-payment-method.njk
+++ b/src/main/features/claimant-response/views/accept-payment-method.njk
@@ -2,7 +2,7 @@
 
 {% from "form.njk" import saveAndContinueButton, csrfProtection, radioGroup, radioGroupWithHintPanel, errorSummary %}
 {% from "./macro/repaymentPlanBlock.njk" import repaymentPlanBlock %}
-{% set heading = 'How they want to pay' %}
+{% set heading = 'Accept or reject their repayment plan' %}
 
 {% block content %}
   <div class="grid-row">
