--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
@@ -25,8 +25,8 @@
 
 {% macro settlementAgreementSignedByClaimantDeadlinePassedClaimDetails(claim, csrf) %}
   {% set defendantName = claim.claimData.defendant.name %}
-  <h2 class="heading-small">{{ t('The defendant has not responded to your settlement agreement') }}</h2>
-  <p>{{ t('You can request a County Court Judgment (CCJ) against them based on the repayment plan they offered.') }}</p>
+  <h2 class="heading-small">{{ t('The defendant has not signed your settlement agreement') }}</h2>
+  <p>{{ t('You can request a County Court Judgment (CCJ) against them based on the repayment plan shown in the agreement.') }}</p>
   <p>{{ t('The court will make an order requiring them to pay the money. It does not guarantee that they pay it.') }}</p>
   <p>{{ t('{{ defendantName }} can still sign the settlement agreement until you request a CCJ.',
       { defendantName: claim.claimData.defendant.name }) }}</p>
@@ -54,3 +54,4 @@
   <p>{{ t('When you’ve been paid in full, you need to let us know.') }}</p>
   <a href="{{ AppPaths.contactUsPage.uri }}" class="button button-secondary">Tell us you've been paid</a>
 {% endmacro %}
+
