--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
@@ -40,3 +40,19 @@
       ' if you need their payment details. Make sure you get receipts for any payments.') | safe }}</p>
   <p>{{ downloadResponseLink(claim) }}</p>
 {% endmacro %}
+
+{% macro settlementAgreementSignedByClaimantNewPaymentPlanDefendantClaimDetails(claim) %}
+  <h2 class="heading-small">{{ t('{{ claimantName }} rejected your repayment plan.',
+      { claimantName: claim.claimData.claimant.name }) }}</h2>
+  {% if courtDetermined %}
+    <p>{{ t('They accepted a new repayment plan determined by the court, based on the financial details you provided.') }}</p>
+  {% elif acceptedByCourt %}
+    <p>{{ t('They suggested a new repayment plan. The court believes you can afford the claimant’s plan, based on the financial details you provided.') }}</p>
+  {% endif %}
+
+  <p>{{ t('They asked you to sign a settlement agreement to formalise the plan.') }}</p>
+  <p>{{ t('If you sign the agreement, they can’t request a County Court Judgment against you unless you break the terms.') }}</p>
+  <p>{{ t('If you don’t sign or respond before 4pm on {{ deadline }} they can request a County Court Judgment against you.', deadline = claim.responseDeadline | date) }}</p>
+  <p>{{ internalLink('View the repayment plan', DashboardPaths.dashboardPage.uri) }}</p>
+  <p>{{ downloadResponseLink(claim) }}</p>
+{% endmacro %}
