More content changes

--- a/src/main/common/components/ccj/paid-amount.njk
+++ b/src/main/common/components/ccj/paid-amount.njk
@@ -21,6 +21,7 @@
           {{ radioOption(label = 'Yes', name = 'option', form = form, value = 'yes', checked = (selection == 'yes')) }}
 
           <div class="panel panel-border-narrow js-hidden" id="option-yes">
+            <p>{{ t('Total claim amount: £{{ totalAmount }}', { totalAmount: totalAmount }) }}</p>
 
             <input type="hidden" name="claimedAmount" value="{{ totalAmount }}" />
             {{ poundInput(label = 'Amount already paid', name = 'amount', form = form) }}
