--- a/src/main/common/components/payment-intention/payment-date.njk
+++ b/src/main/common/components/payment-intention/payment-date.njk
@@ -8,6 +8,12 @@
       <form method="post">
         {{ csrfProtection(csrf) }}
 
+        {% if notice %}
+          <div class="panel">
+            <p>{{ t(notice) }}</p>
+          </div>
+        {% endif %}
+
         {{ dateInput(form = form, name = 'date', hint = t('For example, {{ nextMonth }}', { nextMonth : 'now' | addDays(30) | inputDate })) }}
 
         {{ saveAndContinueButton() }}
