--- a/src/main/features/response/views/eligibility/send-your-response-by-email.njk
+++ b/src/main/features/response/views/eligibility/send-your-response-by-email.njk
@@ -47,7 +47,7 @@
         {% if draft.response.type === ResponseType.DEFENCE %}
           {% if draft.rejectAllOfClaim.option === RejectAllOfClaimOption.COUNTER_CLAIM %}
             <li>{{ t('Print and complete the form') }}</li>
-          {% elseif draft.rejectAllOfClaim.howMuchPaidClaimant.option === HowMuchPaidClaimantOption.LESS_THAN_AMOUNT_CLAIMED %}
+          {% elseif draft.rejectAllOfClaim.option === RejectAllOfClaimOption.ALREADY_PAID %}
             <li>{{ t('Print and complete the forms (ignore section 4 of the defence form unless you’re making a counterclaim).') }}</li>
           {% endif %}
         {% endif %}
